[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 101.0
__meta__ = {
"_edit_group_": true
}

[node name="Atividade1" type="Label" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
margin_right = 642.0
margin_bottom = 99.0
text = "Atividade 1"
align = 1
valign = 1

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = 150.0
margin_bottom = 251.0

[node name="Atividade2" type="Label" parent="ColorRect2"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 499.0
margin_bottom = 100.0
text = "Atividade 2 - "

[node name="LineEdit" type="LineEdit" parent="ColorRect2"]
margin_left = 693.0
margin_top = 1.0
margin_right = 929.0
margin_bottom = 100.0

[node name="Button" type="Button" parent="ColorRect2"]
margin_left = 939.0
margin_top = 41.0
margin_right = 980.0
margin_bottom = 61.0
text = "ADD"

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = 321.0
margin_bottom = 422.0
__meta__ = {
"_edit_group_": true
}

[node name="Atividade3" type="Label" parent="ColorRect3"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 599.0
margin_bottom = 100.0
text = "Atividade 3 -"

[node name="ColorRect4" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = 498.0
margin_bottom = 599.0

[node name="Atividade4" type="Label" parent="ColorRect4"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 601.0
margin_bottom = 100.0
text = "Atividade 4 - "

[node name="LineEdit" type="LineEdit" parent="ColorRect4"]
margin_left = 692.0
margin_top = 3.0
margin_right = 890.0
margin_bottom = 100.0

[node name="ButtonAtividade4" type="Button" parent="ColorRect4"]
margin_left = 916.0
margin_top = 45.0
margin_right = 957.0
margin_bottom = 65.0
text = "ADD"

[connection signal="pressed" from="ColorRect2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect4/ButtonAtividade4" to="." method="_on_ButtonAtividade4_pressed"]
